# term-kit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: Rust.yml  ci.yml
src/: app.rs  events.rs  main.rs  ui.rs
