[package]
name = "term-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.28.1"
directories = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
textwrap = "0.16.2"
copypasta = { version = "0.10.2", optional = true }  # 添加 optional = true
serde_json = "1.0.142"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wl-clipboard-rs = { version = "0.9.2", optional = true }

[features]
default = ["copypasta", "wayland"]
wayland = ["wl-clipboard-rs"]  # 增加 wayland 依赖
